--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-08 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Implemented popup messages.
+
 2011-12-06 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Documented all libxyz modules, not perfect, but done.
