--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -786,7 +786,8 @@ libsdl1.2debian libsdl1.2-dev libsdl-image1.2 libsdl-image1.2-dev \
 libsdl-mixer1.2 libsdl-mixer1.2-dev \
 libfreetype6 libfreetype6-dev libsdl-ttf2.0-0 libsdl-ttf2.0-dev \
 libcurl4-gnutls-dev \
-perl lcov global valgrind graphviz gv texinfo texlive-full \
+perl lcov global valgrind graphviz gv \
+texinfo texlive-base texlive-generic-extra \
 libgtk2.0-dev debhelper
 @end example
 
