Other problem with #35017, fixed (useless ref to lw6dyn_test).

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-09 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Other problem with #35017, fixed (useless ref to lw6dyn_test).
+
 2011-12-08 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Changed default profiles to equilibrate teams.
