--- a/liquidwar6/doc/map-gdoc.texi
+++ b/liquidwar6/doc/map-gdoc.texi
@@ -181,6 +181,42 @@ Gets the highest weapon available for a given exp.
 @strong{Return value:}  a weapon id
 @end deftypefun
 
+@deftypefun {int} {lw6map_exp_is_team_color_allowed} (lw6map_rules_t * @var{rules}, int @var{team_color_id})
+@var{rules}:  set of rules to use
+
+@var{team_color_id}:  color id to test
+
+Tests wether a team color is allowed for a given set of rules.
+
+@strong{Return value:}  1 if allowed, 0 if not.
+@end deftypefun
+
+@deftypefun {int} {lw6map_exp_is_weapon_allowed} (lw6map_rules_t * @var{rules}, int @var{weapon_id})
+@var{rules}:  set of rules to use
+
+@var{weapon_id}:  weapon id to test
+
+Tests wether a weapon is allowed for a given set of rules.
+
+@strong{Return value:}  1 if allowed, 0 if not.
+@end deftypefun
+
+@deftypefun {int} {lw6map_exp_get_unlocked_team_color} (int @var{exp})
+@var{exp}:  exp to test
+
+Get the unlocked team color for a given exp, if applyable.
+
+@strong{Return value:}  -1 if nothing unlocked, else the team color
+@end deftypefun
+
+@deftypefun {int} {lw6map_exp_get_unlocked_weapon} (int @var{exp})
+@var{exp}:  exp to test
+
+Get the unlocked primary weapon for a given exp, if applyable.
+
+@strong{Return value:}  -1 if nothing unlocked, else the weapon id
+@end deftypefun
+
 @deftypefun {char *} {lw6map_to_hexa} (lw6map_level_t * @var{level})
 Converts a map to something that is later readable by @code{lw6map_from_hexa}
 to reproduce the exact same map. Just a serializer.
