--- a/liquidwar6/doc/pil-gdoc.texi
+++ b/liquidwar6/doc/pil-gdoc.texi
@@ -417,6 +417,22 @@ Tells wether a given cursor was winner or not.
 @strong{Return value:}  1 if over, 0 if not
 @end deftypefun
 
+@deftypefun {int} {lw6pil_pilot_get_winner} (lw6pil_pilot_t * @var{pilot})
+@var{pilot}:  the object to query
+
+Gets the winner color.
+
+@strong{Return value:}  a team color, -1 if no winner and/or error.
+@end deftypefun
+
+@deftypefun {int} {lw6pil_pilot_get_looser} (lw6pil_pilot_t * @var{pilot})
+@var{pilot}:  the object to query
+
+Gets the looser color.
+
+@strong{Return value:}  a team color, -1 if no looser and/or error.
+@end deftypefun
+
 @deftypefun {lw6pil_local_cursors_t *} {lw6pil_pilot_get_local_cursors} (lw6pil_pilot_t * @var{pilot})
 @var{pilot}:  object to query
 
