--- a/liquidwar6-extra-maps/NEWS
+++ b/liquidwar6-extra-maps/NEWS
@@ -1,5 +1,11 @@
 Liquid War NEWS -- history of user-visible changes.
 
+* December 2011: release of 0.0.12beta. Major improvements
+  include help, tooltips and breadcrumbs displayed within the
+  menus. The network remote node detection is enabled by default,
+  even if network are not yet possible. Map can also have a
+  proper description, mention author and license in the metadata.
+
 * October 2011: release of 0.0.11beta. This releases introduces
   weapons, to complete the team profiles concept. It also has
   an exp system which unlocks the next level when you win a given
