--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-17 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed display at end of game.
+
 2011-12-15 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Now displays "X wins" at end of game.
