--- a/liquidwar6/po/fr.po
+++ b/liquidwar6/po/fr.po
@@ -211,134 +211,152 @@ msgstr "impossible de lire la ligne de 'credits' %d"
 
 #: src/lib/hlp/hlp-reference.c:2856
 msgid "moves faster than the average"
-msgstr ""
+msgstr "se déplace plus vite que les autres"
 
 #: src/lib/hlp/hlp-reference.c:2857
 msgid "has a better defense than the average"
-msgstr ""
+msgstr "a une meilleure défense que les autres"
 
 #: src/lib/hlp/hlp-reference.c:2858
 msgid "has a strong attack but is slow"
-msgstr ""
+msgstr "a une attaque forte, mais se déplace lentement"
 
 #: src/lib/hlp/hlp-reference.c:2859
 msgid "has a strong attack"
-msgstr ""
+msgstr "a une attaque forte"
 
 #: src/lib/hlp/hlp-reference.c:2860
 msgid "has an extremely good defense but is slow"
-msgstr ""
+msgstr "extrêmement bon en défense, mais très lent"
 
 #: src/lib/hlp/hlp-reference.c:2862
 msgid "is extremely fast but also very vulnerable"
-msgstr ""
+msgstr "extrêmement rapide, mais aussi très vulnérable"
 
 #: src/lib/hlp/hlp-reference.c:2863
 msgid "is fast, but has a very weak attack"
-msgstr ""
+msgstr "rapide, mais avec peu d'attaque"
 
 #: src/lib/hlp/hlp-reference.c:2865
 msgid "has an extremely strong attack but is very slow"
-msgstr ""
+msgstr "attaque très forte, mais très lent"
 
 #: src/lib/hlp/hlp-reference.c:2867
 msgid "has a very good defense but a weak attack"
-msgstr ""
+msgstr "très bonne défense mais attaque faible"
 
 #: src/lib/hlp/hlp-reference.c:2869
 msgid "has a very strong attack, but is also very vulnerable"
-msgstr ""
+msgstr "attaque très forte, et aussi très vulnérable"
 
 #: src/lib/hlp/hlp-reference.c:2876
 msgid "super-strong attack for a limited time, crush your enemies"
-msgstr ""
+msgstr "attaque super forte pour un temps limité, écrasez vos ennemis"
 
 #: src/lib/hlp/hlp-reference.c:2878
 msgid "no damage for a limited time, move untouched"
-msgstr ""
+msgstr "pas de dégâts pendant un certain temps, ne craignez plus rien"
 
 #: src/lib/hlp/hlp-reference.c:2881
 msgid ""
 "fighters placed as far as possible from cursor, magically escape from any "
 "grip"
 msgstr ""
+"les combattants sont placés aussi loin que possible du curseur, échappant à "
+"n'importe quel éteau"
 
 #: src/lib/hlp/hlp-reference.c:2882
 msgid "move faster for a limited time"
-msgstr ""
+msgstr "déplacement plus rapide pendant un certain temps"
 
 #: src/lib/hlp/hlp-reference.c:2884
 msgid "fighters placed as close as possible to cursor"
-msgstr ""
+msgstr "les combattants sont placés au plus près du curseur"
 
 #: src/lib/hlp/hlp-reference.c:2887
 msgid "every fighters of every team scattered in random places"
-msgstr ""
+msgstr "tous les combattants se retrouvent éparpillés n'importe où"
 
 #: src/lib/hlp/hlp-reference.c:2890
 msgid "all other teams are freezed, you can move but not attack them"
 msgstr ""
+"toutes les autres couleurs sont figées sur place, vous pouvez vos déplacer "
+"sans attaquer"
 
 #: src/lib/hlp/hlp-reference.c:2893
 msgid "fighters exchange position, their properties being preserved"
-msgstr ""
+msgstr "toutes les autres équipes sont fig;ees sur pl"
 
 #: src/lib/hlp/hlp-reference.c:2896
 msgid ""
 "you take the control of all other teams while your cursor stays in place"
 msgstr ""
+"vous prenez le contrôle des autres équipes, pendant ce temps-là votre "
+"curseur reste à sa place"
 
 #: src/lib/hlp/hlp-reference.c:2899
 msgid ""
 "will exchange colors, randomly, requires at least 3 teams (double edged "
 "weapon)"
-msgstr ""
+msgstr "échange les couleurs, au hasard, nécessite au moins 3 couleurs"
 
 #: src/lib/hlp/hlp-reference.c:2900
 msgid "steals some fighters to other teams"
-msgstr ""
+msgstr "vole des combattants aux autres équipes"
 
 #: src/lib/hlp/hlp-reference.c:2903
 msgid "nuclear explosion, all fighters arround your cursor are about to die"
 msgstr ""
+"explosion nucléaire, tous les combattants autour de votre curseur sont morts "
+"ou presque"
 
 #: src/lib/hlp/hlp-reference.c:2906
 msgid ""
 "fighters continue to move normally, but attacks are done in reverse mode, "
 "backwards"
 msgstr ""
+"les combattans continuent à se déplacer normalement, mais ils attaquent à "
+"l'envers, par derrière"
 
 #: src/lib/hlp/hlp-reference.c:2909
 msgid "all your opponents go crazy for some time, acting with no logic"
 msgstr ""
+"tous vos ennemis deviennent fou pendant quelques temps, agissant sans logique"
 
 #: src/lib/hlp/hlp-reference.c:2911
 msgid "make the battlefield be like it was a few seconds ago"
-msgstr ""
+msgstr "remet le champs de bataille tel qu'il était quelques secondes avant"
 
 #: src/lib/hlp/hlp-reference.c:2914
 msgid "all fighters from all teams are packed near your cursor"
 msgstr ""
+"tous les combattants de toutes les équipes sont réunis autour de votre "
+"curseur"
 
 #: src/lib/hlp/hlp-reference.c:2916
 msgid "reduces the number of fighters on the map"
-msgstr ""
+msgstr "réduit le nombre de combattants dans le tableau"
 
 #: src/lib/hlp/hlp-reference.c:2919
 msgid ""
 "you die along with the strongest team on the battlefield, requires at least "
 "3 teams"
 msgstr ""
+"vous mourrez et emportez dans votre mort la puissante des autres équipes, "
+"nécessite 3 équipes"
 
 #: src/lib/hlp/hlp-reference.c:2922
 msgid ""
 "you disappear for some time from the battlefield, to reappear later, "
 "somewhere else"
 msgstr ""
+"vous disparaissez pour quelques temps, pour réapparaitre plus tard, ailleurs"
 
 #: src/lib/hlp/hlp-reference.c:2925
 msgid "general disease, all fighters mysteriously loose health"
 msgstr ""
+"maladie généralisée, les combattants perdent mystérieusement des points de "
+"santé"
 
 #: src/lib/ldr/ldr-exp.c:65
 #, c-format
@@ -406,132 +424,131 @@ msgstr "au revoir"
 
 #: src/lib/map/map-color.c:204
 msgid "Red"
-msgstr ""
+msgstr "Rouge"
 
 #: src/lib/map/map-color.c:207
 msgid "Green"
-msgstr ""
+msgstr "Vert"
 
 #: src/lib/map/map-color.c:210
 msgid "Blue"
-msgstr ""
+msgstr "Bleu"
 
 #: src/lib/map/map-color.c:213
-#, fuzzy
 msgid "Yellow"
-msgstr "bonjour"
+msgstr "Jaune"
 
 #: src/lib/map/map-color.c:216
 msgid "Cyan"
-msgstr ""
+msgstr "Cyan"
 
 #: src/lib/map/map-color.c:219
 msgid "Magenta"
-msgstr ""
+msgstr "Magenta"
 
 #: src/lib/map/map-color.c:222
 msgid "Orange"
-msgstr ""
+msgstr "Orange"
 
 #: src/lib/map/map-color.c:225
 msgid "Light blue"
-msgstr ""
+msgstr "Bleu clair"
 
 #: src/lib/map/map-color.c:228
 msgid "Purple"
-msgstr ""
+msgstr "Mauve"
 
 #: src/lib/map/map-color.c:231
 msgid "Pink"
-msgstr ""
+msgstr "Rose"
 
 #: src/lib/map/map-color.c:234
 msgid "Invalid color"
-msgstr ""
+msgstr "Couleur invalide"
 
 #: src/lib/map/map-weapon.c:234
 msgid "Berzerk"
-msgstr ""
+msgstr "Berzerk"
 
 #: src/lib/map/map-weapon.c:237
 msgid "Invincible"
-msgstr ""
+msgstr "Invincible"
 
 #: src/lib/map/map-weapon.c:240
 msgid "Escape"
-msgstr ""
+msgstr "Fuir"
 
 #: src/lib/map/map-weapon.c:243
 msgid "Turbo"
-msgstr ""
+msgstr "Turbo"
 
 #: src/lib/map/map-weapon.c:246
 msgid "Teleport"
-msgstr ""
+msgstr "Téléporter"
 
 #: src/lib/map/map-weapon.c:249
 msgid "Scatter"
-msgstr ""
+msgstr "Éparpiller"
 
 #: src/lib/map/map-weapon.c:252
 msgid "Fix"
-msgstr ""
+msgstr "Immobile"
 
 #: src/lib/map/map-weapon.c:255
 msgid "Mix"
-msgstr ""
+msgstr "Mélange"
 
 #: src/lib/map/map-weapon.c:258 src/scriptpo.c:146
 msgid "Control"
-msgstr ""
+msgstr "Contrôle"
 
 #: src/lib/map/map-weapon.c:261
 msgid "Permutation"
-msgstr ""
+msgstr "Permutation"
 
 #: src/lib/map/map-weapon.c:264
 msgid "Steal"
-msgstr ""
+msgstr "Vol"
 
 #: src/lib/map/map-weapon.c:267
 msgid "Atomic"
-msgstr ""
+msgstr "Atomique"
 
 #: src/lib/map/map-weapon.c:270
 msgid "Reverse"
-msgstr ""
+msgstr "À l'envers"
 
 #: src/lib/map/map-weapon.c:273
 msgid "Crazy"
-msgstr ""
+msgstr "Folie"
 
 #: src/lib/map/map-weapon.c:276
 msgid "Rewind"
-msgstr ""
+msgstr "Renbobiner"
 
 #: src/lib/map/map-weapon.c:279
 msgid "Attract"
-msgstr ""
+msgstr "Attirer"
 
 #: src/lib/map/map-weapon.c:282
 msgid "Shrink"
-msgstr ""
+msgstr "Rapetisser"
 
 #: src/lib/map/map-weapon.c:285
 msgid "Kamikaze"
-msgstr ""
+msgstr "Kamikaze"
 
 #: src/lib/map/map-weapon.c:288
 msgid "Disappear"
-msgstr ""
+msgstr "Disparition"
 
 #: src/lib/map/map-weapon.c:291
 msgid "Plague"
-msgstr ""
+msgstr "Pest"
 
 #: src/lib/map/map-weapon.c:294
 msgid "No weapon"
-msgstr ""
+msgstr "Pas de coup spécial"
 
 #: src/lib/p2p/p2p-data.c:100
 #, c-format
@@ -735,22 +752,28 @@ msgid ""
 "Move cursor: pointer~%Menu: left button~%Primary fire: right button~"
 "%Alternate fire: middle button~%Zoom: wheel"
 msgstr ""
+"Déplacement: pointeur~%Menu: bouton gauche~%Arme principale: bouton droit~"
+"%Arme secondaire: bouton du milieu~%Zoom: wheel"
 
 #: src/scriptpo.c:18
 msgid ""
 "Move cursor: arrows~%Menu: ENTER and ESC~%Primary fire: CTRL key~%Alternate "
 "fire: ALT key~%Zoom: PGUP and PGDOWN"
 msgstr ""
+"Déplacement: flèches~%Menu: ENTER et ESC~%Arme principale: CTRL key~%Arme "
+"secondaire: ALT~%Zoom: PGUP et PGDOWNfire: ALT key~%Zoom: PGUP and PGDOWN"
 
 #: src/scriptpo.c:19 src/scriptpo.c:20
 msgid ""
 "Move cursor: pad/stick~%Menu: A and B buttons~%Primary fire: C button~"
 "%Alternate fire: D button~%Zoom: E and F buttons"
 msgstr ""
+"Déplacement: pad/stick~%Menu: Boutons A et B~%Arme principale: bouton C~"
+"%Arme secondaire: bouton D~%Zoom: boutons E et F"
 
 #: src/scriptpo.c:21
 msgid "Not working yet"
-msgstr ""
+msgstr "Ne fonctionne pas encore"
 
 #: src/scriptpo.c:22
 msgid "Preparing map, this can take some time"
@@ -1284,15 +1307,15 @@ msgstr "Libre"
 
 #: src/scriptpo.c:144
 msgid "Name"
-msgstr ""
+msgstr "Nom"
 
 #: src/scriptpo.c:145
 msgid "Color"
-msgstr ""
+msgstr "Couleur"
 
 #: src/scriptpo.c:147
 msgid "You can create a new player here"
-msgstr ""
+msgstr "Vous pouvez créer un nouveau joueur ici"
 
 #: src/scriptpo.c:148
 msgid "No bots"
@@ -1431,9 +1454,8 @@ msgid "Replay"
 msgstr "Rejouer"
 
 #: src/scriptpo.c:185
-#, fuzzy
 msgid "Replay this level"
-msgstr "Rejouer ce niveau, vu que vous avez perdu"
+msgstr "Rejouer ce niveau"
 
 #: src/scriptpo.c:186
 msgid "Continue"
@@ -1469,15 +1491,15 @@ msgstr "Score"
 
 #: src/scriptpo.c:196 src/scriptpo.c:198
 msgid "~a wins"
-msgstr ""
+msgstr "~a gagne"
 
 #: src/scriptpo.c:199
 msgid "You win!"
-msgstr ""
+msgstr "C'est gagné!"
 
 #: src/scriptpo.c:200
 msgid "You loose..."
-msgstr ""
+msgstr "Perdu..."
 
 #: src/scriptpo.c:201 src/scriptpo.c:202
 msgid "Please wait..."
@@ -1610,16 +1632,3 @@ msgstr "test de la base de données"
 #: src/scriptpo.c:248
 msgid "testing node"
 msgstr "test du noeud"
-
-#~ msgid "And the winner is..."
-#~ msgstr "Et le vainqueur est..."
-
-#~ msgid "Achievement 1/2"
-#~ msgstr "1/2"
-
-#~ msgid ""
-#~ "Choose among the available colors, not that all colors might not be "
-#~ "available when you play the game for the first time"
-#~ msgstr ""
-#~ "Choisissez parmi les couleurs disponibles, toutes les couleurs ne sont "
-#~ "pas activées lorsque vous jouez pour la première fois"
