Added metadata.xml to alpha maps.

--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,3 +1,7 @@
+2011-10-17 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added metadata.xml to alpha maps.
+
 2011-10-02 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Released 0.0.11beta.
