massive add of metadata.xml files

--- a/liquidwar6-extra-maps/map/kasper/garden/README
+++ b/liquidwar6-extra-maps/map/kasper/garden/README
@@ -9,3 +9,6 @@ Created 5/10 2007
 License:
 Creative Commons Attribution-ShareAlike 2.5
 http://creativecommons.org/licenses/by-sa/2.5/
+or, at your option:
+GNU General Public License v2
+http://www.gnu.org/copyleft/gpl.html
