--- a/liquidwar6-extra-maps/map/kasper/atlantis/README
+++ b/liquidwar6-extra-maps/map/kasper/atlantis/README
@@ -22,3 +22,6 @@ Created 7/11 2007
 License:
 Creative Commons Attribution-Share Alike 3.0 Unported
 http://creativecommons.org/licenses/by-sa/3.0/
+or, at your option:
+GNU General Public License v3
+http://www.gnu.org/copyleft/gpl.html
