--- a/liquidwar6-extra-maps/map/kasper/avoid-the-void/README
+++ b/liquidwar6-extra-maps/map/kasper/avoid-the-void/README
@@ -17,3 +17,6 @@ Created 30/1 2010
 License:
 Creative Commons Attribution-Share Alike 3.0 Unported
 http://creativecommons.org/licenses/by-sa/3.0/
+or, at your option:
+GNU General Public License v3
+http://www.gnu.org/copyleft/gpl.html
