--- a/liquidwar6-extra-maps/map/kasper/mobile/README
+++ b/liquidwar6-extra-maps/map/kasper/mobile/README
@@ -11,3 +11,6 @@ Created 16 september 2009
 License:
 Creative Commons Attribution-Share Alike 3.0 Unported
 http://creativecommons.org/licenses/by-sa/3.0/
+or, at your option:
+GNU General Public License v3
+http://www.gnu.org/copyleft/gpl.html
