--- a/liquidwar6-extra-maps/map/kasper/ornimegalonyx/README
+++ b/liquidwar6-extra-maps/map/kasper/ornimegalonyx/README
@@ -7,3 +7,6 @@ Created 24/8 2007
 License:
 Creative Commons Attribution-ShareAlike 2.5
 http://creativecommons.org/licenses/by-sa/2.5/
+or, at your option:
+GNU General Public License v2
+http://www.gnu.org/copyleft/gpl.html
