--- a/liquidwar6-extra-maps/map/kasper/rectangled/README
+++ b/liquidwar6-extra-maps/map/kasper/rectangled/README
@@ -15,3 +15,6 @@ Created 11 august 2011
 License:
 Creative Commons Attribution-Share Alike 3.0 Unported
 http://creativecommons.org/licenses/by-sa/3.0/
+or, at your option:
+GNU General Public License v3
+http://www.gnu.org/copyleft/gpl.html
