--- a/liquidwar6-extra-maps/map/kasper/spiral/README
+++ b/liquidwar6-extra-maps/map/kasper/spiral/README
@@ -12,3 +12,6 @@ Created 20/6 2008
 License:
 Creative Commons Attribution-Share Alike 3.0 Unported
 http://creativecommons.org/licenses/by-sa/3.0/
+or, at your option:
+GNU General Public License v3
+http://www.gnu.org/copyleft/gpl.html
