Added metadata.xml for every map.

--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,5 +1,7 @@
 2011-10-18 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added metadata.xml for every map.
+
 	* Added quaders, rolz and tag maps from LW5.
 
 2011-10-17 : Christian Mauduit <ufoot@ufoot.org>
