--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-18 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Released 0.0.12beta.
+
 2011-12-17 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed display at end of game.
