--- a/liquidwar6/NEWS
+++ b/liquidwar6/NEWS
@@ -5,6 +5,8 @@ Liquid War NEWS -- history of user-visible changes.
   menus. The network remote node detection is enabled by default,
   even if network are not yet possible. Map can also have a
   proper description, mention author and license in the metadata.
+  MS-Windows and Mac OS X packates now include all maps, including
+  the contents of the extra-map package.
 
 * October 2011: release of 0.0.11beta. This releases introduces
   weapons, to complete the team profiles concept. It also has
