--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.0.13beta-1vendor) unstable; urgency=low
+
+  * Updated for 0.0.13beta.
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Mon, 19 Dec 2011 22:15:00 +0100
+
 liquidwar6-extra-maps (0.0.12beta-1vendor) unstable; urgency=low
 
   * Updated for 0.0.12beta.
