--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-22 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed #35125, was an out-of-bound array error.
+
 2011-12-18 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Released 0.0.12beta.
