--- a/liquidwar6-extra-maps/ChangeLog
+++ b/liquidwar6-extra-maps/ChangeLog
@@ -1,3 +1,7 @@
+2011-10-22 : Christian Mauduit <ufoot@ufoot.org>
+
+	* 5 new maps from Joey Dodson (psyforce).
+
 2011-10-18 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Released 0.0.12beta.
