--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-12-22 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added Joey Dodson in credits (5 new maps imported from LW5).
+
 	* Fixed #35107, liquidwar6 --test fails.
 
 	* Fixed #35104, Warnings on MS-Windows build.
