--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-23 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Introduced some const attributes in low-level API.
+
 2011-12-22 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added Joey Dodson in credits (5 new maps imported from LW5).
