--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2011-12-23 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Fixed #35100, old legacy map had a square shape.
+
 	* Guile 2.0 support.
 
 	* Fixed #35099, color detection on some maps.
