--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-24 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Released 0.0.13beta.
+
 2011-12-23 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed #35100, old legacy map had a square shape.
