changed version number to 0.0.14beta

--- a/liquidwar6/debian/changelog
+++ b/liquidwar6/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6 (0.0.14beta-1vendor) unstable; urgency=low
+
+  * Updated for 0.0.14beta.
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 24 Dec 2011 2:00:00 +0100
+
 liquidwar6 (0.0.13beta-1vendor) unstable; urgency=low
 
   * Updated for 0.0.13beta.
