--- a/liquidwar6-extra-maps/debian/changelog
+++ b/liquidwar6-extra-maps/debian/changelog
@@ -1,3 +1,9 @@
+liquidwar6-extra-maps (0.0.14beta-1vendor) unstable; urgency=low
+
+  * Updated for 0.0.14beta.
+
+ -- Christian Mauduit <ufoot@ufoot.org>  Sat, 24 Dec 2011 02:00:00 +0100
+
 liquidwar6-extra-maps (0.0.13beta-1vendor) unstable; urgency=low
 
   * Updated for 0.0.13beta.
