--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -373,6 +373,8 @@ a build is done with a different source.
 2011-12-18 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.12beta/,0.0.12beta}, codename ``Aguirre'', stamp 2938
 @item
 2011-12-24 : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.13beta/,0.0.13beta}, codename ``Blackbeard'', stamp 2950
+@item
+2012-??-?? : @uref{http://download.savannah.gnu.org/releases/liquidwar6/0.0.14beta/,0.0.14beta}, codename ``Davy Crockett'', stamp ????
 @end itemize
 
 @subsection Road map
